@@ -75,6 +75,9 @@
     <ClCompile Include="Source\EU3World\EU3Ruler.cpp">
       <Filter>EU3World</Filter>
     </ClCompile>
+    <ClCompile Include="Source\CK2World\CK2Dynasty.cpp">
+      <Filter>CK2World</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Log.h">
@@ -124,6 +127,9 @@
     </ClInclude>
     <ClInclude Include="Source\EU3World\EU3Ruler.h">
       <Filter>EU3World</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CK2World\CK2Dynasty.h">
+      <Filter>CK2World</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
