@@ -7,6 +7,7 @@
 #include "CK2Title.h"
 #include "CK2Province.h"
 #include "CK2Character.h"
+#include "CK2Dynasty.h"
 
 
 class CK2World
@@ -21,6 +22,7 @@ class CK2World
 		date							endDate;
 		vector<CK2Title*>			independentTitles;
 		vector<CK2Title*>			hreMembers;
+		map<int, CK2Dynasty*>	dynasties;
 		map<int, CK2Character*>	characters;
 		map<string, CK2Title*>	titles;
 		map<int, CK2Province*>	provinces;
