@@ -44,3 +44,4 @@ Revision	Log Message
 42		Add new source files from last change
 43		EU3 nation have rulers and rulers have first names
 44		getvalue() ignores case
+45		Import explicit dynasties
